--- a/ShowControl/ShowControl.csproj
+++ b/ShowControl/ShowControl.csproj
@@ -19,6 +19,9 @@
       <None Update="missing-image.png">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="data-with-very-long-file-name.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
